--- a/src/PortfolioPage.css
+++ b/src/PortfolioPage.css
@@ -137,24 +137,45 @@ body {
 /* Modal */
 .modal {
   display: flex;
+  align-items: center;
+  justify-content: center;
   position: fixed;
-  z-index: 1000;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.8);
-  justify-content: center;
-  align-items: center;
+  background-color: rgba(0, 0, 0, 0.8); /* Fondo oscuro */
+  z-index: 1000;
 }
 
 .modal-content {
-  max-width: 100%; /* Permite que la imagen mantenga su tamaño original */
-  max-height: 100%; /* Permite que la imagen mantenga su tamaño original */
-  object-fit: contain; /* Asegura que la imagen no se recorte */
-  border-radius: 8px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 10px;
+  max-width: fit-content; /* Se ajusta al tamaño de la imagen */
+  max-height: fit-content;
+  padding: 20px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+  transform: scale(0.30); /* Reduce la imagen al 80% de su tamaño original */
 }
 
+
+/* Estilos de la imagen dentro del modal */
+.modal-image {
+  max-width: 100%; /* No sobrepasa el tamaño del modal */
+  max-height: 90vh; /* Se ajusta al alto de la pantalla sin desbordar */
+  object-fit: scale-down; /* Se asegura de mantener el tamaño original sin recortarse */
+  display: block;
+}
+
+
+.modal-image-container {
+  width: 50%; /* La imagen ocupará la mitad del modal */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
 
 /* Botón de cerrar */
@@ -162,7 +183,7 @@ body {
   position: absolute;
   top: 20px;
   right: 30px;
-  font-size: 40px;
+  font-size: 50px;
   color: white;
   cursor: pointer;
   font-weight: bold;
