--- a/src/PortfolioPage.css
+++ b/src/PortfolioPage.css
@@ -2,8 +2,8 @@
 body {
   margin: 0;
   font-family: Arial, sans-serif;
-  background-color: #f4f4f4;
-  color: #333;
+  background-color: #000000;
+  color: #ffffff;
 }
 
 .container {
@@ -17,7 +17,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #222;
+  background-color: #702a2a;
   color: white;
   padding: 20px;
 }
@@ -29,7 +29,7 @@ body {
 }
 
 .header a {
-  color: white;
+  color: rgb(0, 0, 0);
   text-decoration: none;
 }
 
@@ -37,7 +37,7 @@ body {
 .hero {
   text-align: center;
   padding: 50px 20px;
-  background: linear-gradient(to right, #6a11cb, #2575fc);
+  background: black
   color: white;
 }
 
@@ -61,7 +61,8 @@ body {
 .about {
   padding: 50px 20px;
   text-align: center;
-  background-color: white;
+  background-color: rgb(0, 0, 0);
+  color: white;
 }
 
 /* Contact Section */
@@ -200,4 +201,40 @@ body {
   max-width: 100%;
   max-height: 100%;
   object-fit: contain;
+}
+
+.whatsapp-float {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  z-index: 1000;
+}
+
+.whatsapp-float img {
+  width: 50px;
+  height: 50px;
+  cursor: pointer;
+  transition: transform 0.3s ease-in-out;
+}
+
+.whatsapp-float img:hover {
+  transform: scale(1.1);
+}
+
+.Instagram-float {
+  position: fixed;
+  bottom: 80px;
+  right: 20px;
+  z-index: 1000;
+}
+
+.Instagram-float img {
+  width: 50px;
+  height: 50px;
+  cursor: pointer;
+  transition: transform 0.3s ease-in-out;
+}
+
+.Instragram-float img:hover {
+  transform: scale(1.1);
 }
