--- a/src/PortfolioPage.css
+++ b/src/PortfolioPage.css
@@ -132,15 +132,17 @@ body {
   align-items: center;
   position: relative;
   width: 100%;
-  height: 80vh; /* Altura del hero */
+  height: 80vh; /* Altura del header */
   background-image: url("/header.jpeg"); /* Imagen de fondo */
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  color: white;
+  margin-top: 30px;
   border-radius: 10px;
-  padding: 100px 20px; /* Espaciado interno */
-  margin-top: 50px;
 }
+
+/* Estilos para la navegación */
 
 .hero::before {
   content: "";
@@ -171,6 +173,7 @@ body {
   font-size: 24px;
   margin-bottom: 10px;
   font-weight: bold;
+  margin: 0;
 }
 
 .hero p {
